Fix responses MIME types, add integration tests and update swagger (#17)
