# app/routes/videos.py
@@ -1,11 +1,13 @@
 import json
-from flask import Blueprint, request, Response
+from datetime import datetime
+from flask import Blueprint, request
 from flask import current_app as app
 from werkzeug.utils import secure_filename
 from security.security import token_required
+from utils.flask_utils import error_response, success_response
+
 from database.models.video_info import VideoInfo
 from database.models.comment import Comment
-from datetime import datetime
 
 bp_videos = Blueprint("bp_videos", __name__)
 
@@ -24,7 +26,7 @@ def home_videos():
         video_id = video['id']
         video_info = VideoInfo.objects.get(video_id=video_id)
         video['likes'] = len(video_info.likes)
-    return Response(json.dumps(res_json), status=200)
+    return success_response(200, res_json)
 
 @bp_videos.route('/videos/<int:video_id>', methods=['GET'])
 @token_required
@@ -39,17 +41,17 @@ def get_video(user_info, video_id):
     video_info = VideoInfo.objects.get(video_id=video_id)
     video['likes'] = len(video_info.likes)
     video['user_related_info'] = {'is_liked': int(user_info['id']) in video_info.likes}
-    return Response(json.dumps(video), status=200)
+    return success_response(200, video)
 
 def add_comment_to_video(user_info, request, video_id):
     body = request.get_json()
 
     if any(r not in body for r in required_post_comment_fields):
-        return Response(json.dumps({'reason':'Fields are incomplete'}), status=400)
+        return error_response(400, 'Fields are incomplete')
 
     video = VideoInfo.objects.with_id(video_id)
     if video is None:
-        return Response(json.dumps({'reason':'Video not found'}), status=404)
+        return error_response(404, 'Video not found')
 
     user_id = int(user_info["id"])
 
@@ -60,12 +62,12 @@ def add_comment_to_video(user_info, request, video_id):
     video_info.save()
 
     result = {'comment_id': comment.comment_id, 'user_id': user_id, 'author': author, 'content': content, 'timestamp': timestamp}
-    return Response(json.dumps(result), status=201)
+    return success_response(201, result)
 
 def get_comment_from_video(request, video_id):
     video = VideoInfo.objects.with_id(video_id)
     if video is None:
-        return Response(json.dumps({'reason':'Video not found'}), status=404)
+        return error_response(404, 'Video not found')
 
     body = request.get_json()
     video_info = VideoInfo.objects.get(video_id=video_id)
@@ -76,7 +78,7 @@ def get_comment_from_video(request, video_id):
         result.append({'comment_id': comment.comment_id, 'user_id': comment.user_id, 'author': comment.author,
         'content': comment.content, 'timestamp': comment.timestamp})
     result.sort(key=lambda d: datetime.strptime(d['timestamp'], '%m/%d/%y %H:%M:%S'))
-    return Response(json.dumps(result), status=200)
+    return success_response(200, result)
 
 @bp_videos.route('/videos/<int:video_id>/comments', methods=['GET', 'POST'])
 @token_required
@@ -91,11 +93,11 @@ def video_likes(user_info, video_id):
     body = request.get_json()
 
     if required_put_likes_field not in body:
-        return Response(json.dumps({'reason':'Fields are incomplete'}), status=400)
+        return error_response(400, 'Fields are incomplete')
 
     video = VideoInfo.objects.with_id(video_id)
     if video is None:
-        return Response(json.dumps({'reason':'Video not found'}), status=404)
+        return error_response(404, 'Video not found')
 
     liked = body['liked']
 
@@ -110,4 +112,4 @@ def video_likes(user_info, video_id):
         likes.append(user_id)
     video_info.save()
 
-    return Response(json.dumps({'result':'Like updated'}), status=200)
+    return success_response(200, {'result':'Like updated'})
